2014-11-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\sub, \sup, \mathopsup): new commands @sub and @sup.
	(\ptexsp, \ptexsup): save and restore in \tex.
	(\finishsub, \finishsup): helper macros.
	* NEWS,
	* doc/refcard/txirefcard.tex,
	* doc/texinfo.texi (Inserting Subscripts and Superscripts),
	(HTML Xref Command Expansion),
	(Command Summary): document them.
	(Inserting Math): \mathopsup exception for plain TeX's \sup.
	
	* doc/txirefcard.tex: alphabetize some of the command lists,
	when other orderings aren't preferable.

2014-11-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Comments): must not be followed by -.
	Patrice, texinfo-devel 22 Nov 2014 15:18:07.

	* doc/texinfo.texi (@noindent, @indent): more explicitly describe
	recommendations and current behavior.

2014-11-22  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Common.pm (%style_commands), 
	Texinfo/Convert/DocBook.pm (%style_attribute_commands),
	Texinfo/Convert/HTML.pm (%style_attribute_commands),
	Texinfo/Convert/Plaintext.pm (%style_map),
	util/texinfo.dtd: add @sub and @sup.  Report and formatting
	proposal from Per Bothner.

2014-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (read_key_sequence): Set info_explicit_arg or 
	ea_explicit_arg if argument was given with sequence of C-u's.
	* info/t/c-u-m-x-scroll-forward.sh: New test.

2014-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Top Node Naming): Fix typo.

2014-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm: Set 
	$default_commands_conversion{'raggedright'} to reference to 
	_convert_command_noop so that contents of @raggedright block 
	appear.  Report from Mahlon Smith.

2014-11-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (degrade_utf8): Add some more ASCII 
	replacements.

2014-11-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search) <backspace>: Remove a 
	complete multi-byte character.
